{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 603,
  "lineage": "7374e66a-67a1-5022-fa15-3d190b136f1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2168c91cd7d0fd9",
            "arn": "arn:aws:ec2:eu-west-1:058264357478:elastic-ip/eipalloc-0a2168c91cd7d0fd9",
            "association_id": "eipassoc-010a954c30556340c",
            "domain": "vpc",
            "id": "eipalloc-0a2168c91cd7d0fd9",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-08c54fb75572f403a",
            "private_dns": "ip-10-0-67-161.eu-west-1.compute.internal",
            "private_ip": "10.0.67.161",
            "public_dns": "ec2-34-252-51-142.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.51.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gmfs-ire-prod-nat-act01"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-nat-act01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a422d70f727fe93e",
            "arn": "arn:aws:ec2:eu-west-1:058264357478:instance/i-06b494b6183284e6a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gmfs-ire-prod-bastion-profile",
            "id": "i-06b494b6183284e6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "OTPersonal.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a3435806785d8ac",
            "private_dns": "ip-10-0-64-15.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.64.15",
            "public_dns": "ec2-54-229-244-179.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.229.244.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:058264357478:key/3e67cb5b-3ab9-4009-9be3-a33d11688e43",
                "tags": {
                  "ENV": "prod",
                  "Name": "gmfs-ire-prod-bastion-host",
                  "Terraform": "true"
                },
                "tags_all": {
                  "ENV": "prod",
                  "Name": "gmfs-ire-prod-bastion-host",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-03c68b01c11977650",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0262555f725d20125",
            "tags": {
              "AName": "gmfs-ire-prod-bastion-host-eu-west-1a",
              "ENV": "prod",
              "Name": "gmfs-ire-prod-bastion-host",
              "Terraform": "true"
            },
            "tags_all": {
              "AName": "gmfs-ire-prod-bastion-host-eu-west-1a",
              "ENV": "prod",
              "Name": "gmfs-ire-prod-bastion-host",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0603c30493ce10e6b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_iam_role",
            "aws_security_group.bastion_host_secgroup",
            "aws_security_group.forti_internal_secgroup",
            "aws_subnet.public_zone1",
            "aws_subnet.public_zone2",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume_document"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:internet-gateway/igw-0654f6f96ae92f7a9",
            "id": "igw-0654f6f96ae92f7a9",
            "owner_id": "058264357478",
            "tags": {
              "Name": "gmfs-ire-prod-igw-act01"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-igw-act01"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2168c91cd7d0fd9",
            "association_id": "eipassoc-010a954c30556340c",
            "connectivity_type": "public",
            "id": "nat-0ce56b7ca5a8d3ded",
            "network_interface_id": "eni-08c54fb75572f403a",
            "private_ip": "10.0.67.161",
            "public_ip": "34.252.51.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0262555f725d20125",
            "tags": {
              "Name": "gmfs-ire-prod-nat-act01"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-nat-act01"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:route-table/rtb-069da43d50a5a872e",
            "id": "rtb-069da43d50a5a872e",
            "owner_id": "058264357478",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce56b7ca5a8d3ded",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gmfs-ire-prod-private"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:route-table/rtb-05572ce94fc1032e4",
            "id": "rtb-05572ce94fc1032e4",
            "owner_id": "058264357478",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0654f6f96ae92f7a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gmfs-ire-prod-public"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forti-hamgmt-attachment_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb3f242068adc22a",
            "route_table_id": "rtb-05572ce94fc1032e4",
            "subnet_id": "subnet-08196dbd5d37b20d7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.forti_ha_mgmt_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forti-hamgmt-attachment_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ee7ccc4cdb3ed6",
            "route_table_id": "rtb-05572ce94fc1032e4",
            "subnet_id": "subnet-0603bf1c0a9973d2d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.forti_ha_mgmt_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forti-hasync-attachment_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022a657b1247adc9a",
            "route_table_id": "rtb-069da43d50a5a872e",
            "subnet_id": "subnet-05ef39fdcb6f57039"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.forti_ha_sync_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forti-hasync-attachment_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0209909537eb8ef89",
            "route_table_id": "rtb-069da43d50a5a872e",
            "subnet_id": "subnet-0cfb7274ed99c79eb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.forti_ha_sync_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f62f3aa658540b42",
            "route_table_id": "rtb-069da43d50a5a872e",
            "subnet_id": "subnet-013656a2200fde82f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ab8454cc8d07454",
            "route_table_id": "rtb-069da43d50a5a872e",
            "subnet_id": "subnet-02efb00678e10e895"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085c7624d59349054",
            "route_table_id": "rtb-05572ce94fc1032e4",
            "subnet_id": "subnet-0262555f725d20125"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e16d4990257a68b8",
            "route_table_id": "rtb-05572ce94fc1032e4",
            "subnet_id": "subnet-01b5fbdcd3da05b26"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_eks_nlb_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-0c55726380bd05ded",
            "description": "Security Group for EKS NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c55726380bd05ded",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Temp Allow Connectivity from Internet for esting",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Temp Allow Connectivity from Internet for esting",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow all from bastion host",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0603c30493ce10e6b"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all from fortigate",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06ffc5fa4a35b2fa9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gmfs-ire-prod-eks-nlb-secgroup",
            "name_prefix": "",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gmfs-ire-prod-eks-nlb-secgroup"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-eks-nlb-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_secgroup",
            "aws_security_group.forti_internal_secgroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-0603c30493ce10e6b",
            "description": "Security Group for EKS NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0603c30493ce10e6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "41.155.68.45/32"
                ],
                "description": "Allow access to only office IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow Access to Fortigate",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06ffc5fa4a35b2fa9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gmfs-ire-prod-ec2-bastion-secgroup",
            "name_prefix": "",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {
              "ENV": "prod",
              "Name": "gmfs-ire-prod-ec2-bastion-secgroup"
            },
            "tags_all": {
              "ENV": "prod",
              "Name": "gmfs-ire-prod-ec2-bastion-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.forti_internal_secgroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "forti_admin_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-0501c29f54d309c3d",
            "description": "Admin security group for managing Fortigate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0501c29f54d309c3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "41.155.68.45/32"
                ],
                "description": "Web access through Office Vodafone IP 1",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "41.155.68.45/32"
                ],
                "description": "ssh access through Office Ips",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gmfs-ire-prod-forti-admin-secgroup",
            "name_prefix": "",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gmfs-ire-prod-forti-admin-secgroup"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-forti-admin-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "forti_internal_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-06ffc5fa4a35b2fa9",
            "description": "Allow all for internal use",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ffc5fa4a35b2fa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gmfs-ire-prod-forti-internal-secgroup",
            "name_prefix": "",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gmfs-ire-prod-forti-internal-secgroup"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-forti-internal-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "forti_partner_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-0c4a717c018264567",
            "description": "Partner security group for Fortigate VPN or accessing services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4a717c018264567",
            "ingress": [],
            "name": "gmfs-ire-prod-forti-partner-secgroup",
            "name_prefix": "",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gmfs-ire-prod-forti-partner-secgroup"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-forti-partner-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-0f1f7b633579c7b6e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1f7b633579c7b6e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "gmfs-ire-prod-postgres-sg",
            "name_prefix": "",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "forti_ha_mgmt_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-08196dbd5d37b20d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.130.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08196dbd5d37b20d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-hamgmt-eu-west-1a"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-hamgmt-eu-west-1a"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "forti_ha_mgmt_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-0603bf1c0a9973d2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.131.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603bf1c0a9973d2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-hamgmt-eu-west-1b"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-hamgmt-eu-west-1b"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "forti_ha_sync_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-05ef39fdcb6f57039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ef39fdcb6f57039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-hasync-eu-west-1a"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-hasync-eu-west-1a"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "forti_ha_sync_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-0cfb7274ed99c79eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.129.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfb7274ed99c79eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-hasync-eu-west-1b"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-hasync-eu-west-1b"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-013656a2200fde82f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013656a2200fde82f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-private-eu-west-1a",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-private-eu-west-1a",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-02efb00678e10e895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02efb00678e10e895",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-private-eu-west-1b",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-private-eu-west-1b",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-0262555f725d20125",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0262555f725d20125",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-public-eu-west-1a",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-public-eu-west-1a",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:subnet/subnet-01b5fbdcd3da05b26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b5fbdcd3da05b26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264357478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmfs-ire-prod-public-eu-west-1b",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-public-eu-west-1b",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:vpc/vpc-0f97c0d5c8448ad2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081ca52d2a68865e2",
            "default_route_table_id": "rtb-0cf245d50fca77431",
            "default_security_group_id": "sg-0decf2ecbf1b707bc",
            "dhcp_options_id": "dopt-055afd8d75f207b99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f97c0d5c8448ad2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf245d50fca77431",
            "owner_id": "058264357478",
            "tags": {
              "Name": "gmfs-ire-prod-vpc-act01"
            },
            "tags_all": {
              "Name": "gmfs-ire-prod-vpc-act01"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "gmfs-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/gmfs-ire-prod-nlb-mdw",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-backend-protocol": "tcp",
                  "service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout": "60",
                  "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-manage-backend-security-group-rules": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-name": "gmfs-ire-prod-nlb-mdw",
                  "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": "ip",
                  "service.beta.kubernetes.io/aws-load-balancer-private-ipv4-addresses": "10.0.0.20, 10.0.32.20",
                  "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
                  "service.beta.kubernetes.io/aws-load-balancer-security-groups": "sg-0c55726380bd05ded",
                  "service.beta.kubernetes.io/aws-load-balancer-subnets": "subnet-013656a2200fde82f,subnet-02efb00678e10e895",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "external"
                },
                "generation": 0,
                "name": "gmfs-ire-prod-nlb-mdw",
                "namespace": "default",
                "resource_version": "284507",
                "uid": "404d1650-654b-4c27-8d9f-cfec6b8df46f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.72.215",
                "cluster_ips": [
                  "172.20.72.215"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "load_balancer_class": "service.k8s.aws/nlb",
                "port": [
                  {
                    "name": "http-port",
                    "node_port": 30173,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "gmfs-ire-prod-nlb-mdw"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "gmfs-ire-prod-nlb-mdw-12cba50dd68b34ad.elb.eu-west-1.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_iam_role.eks_admin_role_name",
            "aws_security_group.aws_eks_nlb_secgroup",
            "aws_subnet.private_zone1",
            "aws_subnet.private_zone2",
            "data.aws_eks_cluster_auth.eks",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-0de7c702eac787829",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0de7c702eac787829",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0803628074d054b15"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gmfs-ire-prod-mdw-eks-act01-cluster-20241016235357319800000011",
            "name_prefix": "gmfs-ire-prod-mdw-eks-act01-cluster-",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "mdw-eks-act01",
              "GithubRepo": "github.com/aws-samples/eks-blueprints-for-terraform-workshop",
              "Name": "gmfs-ire-prod-mdw-eks-act01-cluster"
            },
            "tags_all": {
              "Blueprint": "mdw-eks-act01",
              "GithubRepo": "github.com/aws-samples/eks-blueprints-for-terraform-workshop",
              "Name": "gmfs-ire-prod-mdw-eks-act01-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058264357478:security-group/sg-0803628074d054b15",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0803628074d054b15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de7c702eac787829"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de7c702eac787829"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de7c702eac787829"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de7c702eac787829"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de7c702eac787829"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de7c702eac787829"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "temp allow bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0603c30493ce10e6b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "gmfs-ire-prod-mdw-eks-act01-node-20241016235358073700000012",
            "name_prefix": "gmfs-ire-prod-mdw-eks-act01-node-",
            "owner_id": "058264357478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "mdw-eks-act01",
              "GithubRepo": "github.com/aws-samples/eks-blueprints-for-terraform-workshop",
              "Name": "gmfs-ire-prod-mdw-eks-act01-node",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned"
            },
            "tags_all": {
              "Blueprint": "mdw-eks-act01",
              "GithubRepo": "github.com/aws-samples/eks-blueprints-for-terraform-workshop",
              "Name": "gmfs-ire-prod-mdw-eks-act01-node",
              "kubernetes.io/cluster/gmfs-ire-prod-mdw-eks-act01": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97c0d5c8448ad2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-835254986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de7c702eac787829",
            "security_group_rule_id": "sgr-0ab7ae29b9ddab290",
            "self": false,
            "source_security_group_id": "sg-0803628074d054b15",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2596762443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-0352211cb7296b0be",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1529971410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-0b293c720711a5c4b",
            "self": false,
            "source_security_group_id": "sg-0de7c702eac787829",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3342367411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-07c1284e43bbbb71c",
            "self": false,
            "source_security_group_id": "sg-0de7c702eac787829",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-242883877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-0b86d84ca35be11e5",
            "self": false,
            "source_security_group_id": "sg-0de7c702eac787829",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-489038084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-0a0d3f9623eb7cbaa",
            "self": false,
            "source_security_group_id": "sg-0de7c702eac787829",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2038895311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-0222d4e9974d4032f",
            "self": false,
            "source_security_group_id": "sg-0de7c702eac787829",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3017675260",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-04af62ec6d1b9bcfd",
            "self": false,
            "source_security_group_id": "sg-0de7c702eac787829",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2443261247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-0aab8640f299d33a6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3464001400",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-042d8f2278d3e65b7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1780995223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0803628074d054b15",
            "security_group_rule_id": "sgr-09b7348bbde1a987c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}